--- a/views/check.html
+++ b/views/check.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./check.css">
+    <link rel="stylesheet" href="../public/check.css">
     <title>점호 체크하기</title>
 </head>
 <body>
