--- a/public/attendance.css
+++ b/public/attendance.css
@@ -1,6 +1,6 @@
 /* 이미지의 위치조정 */
 .img{
-    margin-top: -363px;
+    margin-top: -290px;
 }
 
 /* 버튼 스타일 */
@@ -44,9 +44,14 @@
 /* input 박스의 크기 */
 #userId, #userPw{
     padding: 10px;
+    cursor: text;
 }
 
 /* 버튼의 텍스트 폰트크기 */
 #btnText{
     font-size: 15px;
+}
+.view #floor, #room{
+    height: 25px;
+    width: 80px;
 }
