--- a/public/check.css
+++ b/public/check.css
@@ -2,11 +2,12 @@
     text-align: center;
 }
 #btn{
-    margin-left: 630px;
+    margin-left: 620px;
     width: 250px;
 	border-radius: 50%;
     height: 250px;
     border: none;
+    text-align: center;
 }
 #btn:hover{
     background-color: rgb(189, 189, 189);
