--- a/views/check.html
+++ b/views/check.html
@@ -12,4 +12,5 @@
         <button id="btn"><label id="btnText">Check</label></button>
     </div>
 </body>
+<script src="../public/check.js"></script>
 </html>
