--- a/views/teacher.html
+++ b/views/teacher.html
@@ -11,16 +11,84 @@
         <div>
             <label id="title"><h1>기숙사</h1></label>
             <select id="floor">
-                <option>2층</option>
-                <option>3층</option>
-                <option>4층</option>
+                <option value="1" selected>2층</option>
+                <option value="2">3층</option>
+                <option value="3">4층</option>
             </select>
         </div>
         <div>
             <fieldset class="ui">
-
+                <div>
+                    층 수를 선택해주세요.
+                    <div id="circle">
+                        <ul style="list-style: none;">
+                            <div>
+                                <li>
+                                    <span id="quick-icon1"></span>
+                                    <p class="room-label">201호</p>
+                                <li>
+                                    <span id="quick-icon2"></span>
+                                    <p class="room-label">202호</p>
+                                </li>
+                                <li>
+                                    <span id="quick-icon3"></span>
+                                    <p class="room-label">203호</p>
+                                </li>
+                                <li>
+                                    <span id="quick-icon4"></span>
+                                    <p class="room-label">204호</p>
+                                </li>
+                                <li>
+                                    <span id="quick-icon5"></span>
+                                    <p class="room-label">205호</p>
+                                </li>
+                                <li>
+                                    <span id="quick-icon6"></span>
+                                    <p class="room-label">206호</p>
+                                </li>
+                                <li>
+                                    <span id="quick-icon7"></span>
+                                    <p class="room-label">207호</p>
+                                </li>
+                                <li>
+                                    <span id="quick-icon8"></span>
+                                    <p class="room-label">208호</p>
+                                </li>
+                                <li>
+                                    <span id="quick-icon9"></span>
+                                    <p class="room-label">209호</p>
+                                </li>
+                                <li>
+                                    <span id="quick-icon10"></span>
+                                    <p class="room-label">210호</p>
+                                </li>
+                                <li>
+                                    <span id="quick-icon11"></span>
+                                    <p class="room-label">211호</p>
+                                </li>
+                                <li>
+                                    <span id="quick-icon12"></span>
+                                    <p class="room-label">212호</p>
+                                </li>
+                                <li>
+                                    <span id="quick-icon13"></span>
+                                    <p class="room-label">213호</p>
+                                </li>
+                                <li>
+                                    <span id="quick-icon14"></span>
+                                    <p class="room-label">214호</p>
+                                </li>
+                                <li>
+                                    <span id="quick-icon15"></span>
+                                    <p class="room-label">215호</p>
+                                </li>
+                            </div>
+                        </ul>
+                    </div>
+                </div>
             </fieldset>
         </div>
     </div>
 </body>
+<script src="../public/teacher.js"></script>
 </html>
