--- a/public/teacher.css
+++ b/public/teacher.css
@@ -1,11 +1,17 @@
+body {
+    overflow-x: auto;
+}
+
 #title {
     text-align: center;
     padding: 5px;
 }
 .ui{
-    height: 200px;
-    margin-left: 90px;
-    margin-right: 90px;
+    width: 1000px;
+    height: 530px;
+    margin-left: auto;
+    margin-right:auto;
+
 }
 #floor{
     width: 100px;
@@ -16,4 +22,40 @@
 }
 #floor:hover{
     background-color: rgb(198, 198, 198);
+}
+
+#circle ul {
+    margin-left: 100px;
+    padding: 0;
+    overflow: hidden;
+}
+#circle ul li {
+    
+    float: left;
+    width: 15%;
+    padding-top: 20px;
+    text-align: center;
+    margin: 10px 0;
+}
+#circle ul li span {
+    display: block;
+    width: 75px;
+    height: 75px;
+    border-radius: 100%;
+    border: 1px solid #ddd;
+    line-height: 150px;
+    background-color: rgb(222, 222, 222);
+    text-align: center;
+}
+#quick-icon1 {
+    background-image: url(../images/icon_01.jpg);
+}
+#quick-icon2 {
+    background-image: url(/images/icon_02.jpg);
+}
+#quick-icon3 {
+    background-image: url(/images/icon_03.jpg);
+}
+.room-label {
+    margin-left: -60px;
 }
